Revert "Merge remote-tracking branch 'upstream/master'"
This reverts commit 09a9201862410fe76b39da87bcc80cd28f088961, reversing
changes made to 6768b81ab0e55993f9cb40ae9bb0bd0a74d3ee92.

--- a/style.css
+++ b/style.css
@@ -326,6 +326,8 @@ a {
 	color: #41f5f5;
 	text-decoration-line: none;
 	cursor: pointer;
+	width: 100%;
+	min-width: 100%;
 	font-family: "Lucida Console", "Courier New", monospace;
 	-webkit-text-stroke-width: 1px;
 	-webkit-text-stroke-color: #02f2f2;
@@ -566,8 +568,4 @@ ul {
 	position: absolute;
 	right: 55px;
 	top: 65px;
-}
-
-button > * {
-	pointer-events:none;
 }
